Fix .navbar not to wrap over notification baadge

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -84,6 +84,7 @@ nav.navbar-violet {
 }
 ul.nav>li>a {
     padding: 20px 30px;
+    white-space: nowrap;
 }
 .navbar-label-icon {
     display: none;
